--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
         run: docker build -t ${{ secrets.DOCKER_USERNAME }}/my-node-app:latest .
 
       - name: login to Docker Hub
-        run: echo ${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{secrets.DOCKER_USERNAME }}" --password-stdin
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: push images to Docker Hub
         run: docker push ${{ secrets.DOCKER_USERNAME }}/my-node-app:latest
