--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,13 +27,13 @@ jobs:
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: push images to Docker Hub
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/my-node-app:latest
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/my-node:latest
 
       - name: Done
         run: echo "Images Pueshed to Docker Hub"
 
       - name: Deploy to Ec2 via SSH
-        uses: appleboy/ssh-action@v1.0.0
+        uses: ubuntu/ssh-action@v1.0.0
         with: 
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
