--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
         run: npm install
 
       - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/my-node-app:latest .
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/my-node:latest .
 
       - name: login to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
@@ -39,6 +39,6 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           scripts: |
-            docker pull ${{ secrets.DOCKER_USERNAME }}/my-node-app::latest
+            docker pull ${{ secrets.DOCKER_USERNAME }}/my-node::latest
             docker stop myapp || true && docker rm myapp || true
-            docker run -d --name myapp -p 3000:3000 ${{ secrets.DOCKER_USERNAME }}/my-node-app:latest
+            docker run -d --name myapp -p 3000:3000 ${{ secrets.DOCKER_USERNAME }}/my-node:latest
